<resources>

    <string name="app_name">MS Savings Calculator</string>
    <string name="client_statement_total">Client Total</string>
    <string name="statement_total">Statement Total</string>
    <string name="statement_total_exc_terminal">Total ex. Terminal</string>
    <string name="customer_terminal">Client Terminal</string>
    <string name="vendor_inc_pci">PCI DSS Fee</string>
    <string name="vendor_rate">Vendor Rate</string>
    <string name="vendor_terminal">Vendor Terminal</string>
    <string name="vendor_statement_total">Vendor Total</string>
    <string name="calculated_total">Cost</string>
    <string name="saving_percentage">Saving</string>
    <string name="savings_month">1 Month</string>
    <string name="saving_year">1 Year</string>
    <string name="saving_4years">4 Years</string>
    <string name="cc_short">CC</string>
    <string name="cc_long">Credit Card</string>
    <string name="cc_calculation_row_label">CC</string>
    <string name="cc_rate">CC Rate</string>
    <string name="cc_rate_long">Credit Card Rate</string>
    <string name="cc_total">CC Total</string>
    <string name="bc_short">BC</string>
    <string name="bc_long">Business Card</string>
    <string name="bc_calculation_row_label">BC</string>
    <string name="bc_rate">BC Rate</string>
    <string name="bc_rate_long">Business Card Rate</string>
    <string name="bc_total">BC Total</string>
    <string name="dc_short">DC</string>
    <string name="dc_long">Debit Card</string>
    <string name="dc_calculation_row_label">DC</string>
    <string name="dc_rate">DC Rate</string>
    <string name="dc_rate_long">Debit Card Rate</string>
    <string name="dc_total">DC Total</string>
    <string name="client_section_header">Client</string>
    <string name="vendor_section_header">Vendor</string>
    <string name="summary_section_header">Summary</string>
    <string name="savings_section_header">Saving</string>
    <string name="quote_calculation_section_heading">Calculation</string>
    <string name="saving_overall">Overall</string>
    <string name="incumbent_cost">Incumbent Cost</string>
    <string name="proposed_rate">Proposed Rates</string>
    <string name="pref_title">Settings</string>
    <string name="pref_key_quote">Quote</string>
    <string name="pref_quote_default">Default</string>
    <string name="pref_quote_default_summ">The default quote loaded on startup</string>
    <string name="pref_key_branding">Branding</string>
    <string name="pref_branding_icon">Icon</string>
    <string name="pref_branding_icon_summ">A branded icon to display in the heading bar</string>
    <string name="pref_branding_heading">Heading</string>
    <string name="pref_branding_heading_summ">Heading text to display as default</string>
    <string name="pref_branding_vendor_name">Vendor</string>
    <string name="pref_branding_vendor_name_summ">Name displayed on quote screen</string>
    <string name="pref_key_share">Sharing</string>
    <string name="pref_share_recipient">Recipient</string>
    <string name="pref_share_recipient_summ">The default recipient for shared Quotes</string>
    <string name="pref_share_cc">Copy (cc)</string>
    <string name="pref_share_cc_summ">The default cc for shared Quotes</string>
    <string name="pref_share_bcc">Blind Copy (bcc)</string>
    <string name="pref_share_bcc_summ">The default bcc for shared Quotes</string>
    <string name="contact_lookup">...</string>
    <string name="preference_contact_title">Contact Lookup</string>
    <string name="choose_email_heading">Please choose address?</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_load">Load</string>
    <string name="action_reset">Reset</string>
    <string name="action_send">Send</string>
    <string name="load_quote_dialog_title">Restore saved quote?</string>
    <string name="load_quote_dialog_row_remove">Remove Quote</string>

</resources>