<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_send"
        android:icon="@drawable/social_share"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_send"/>

    <item
        android:id="@+id/action_load"
        android:icon="@drawable/action_search"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_load"/>

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/content_save"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_save"/>

    <item
        android:id="@+id/action_resetEntry"
        android:icon="@drawable/av_replay"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_reset"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/av_replay"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/pref_title"/>

</menu>