<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:a="http://schemas.android.com/apk/res/android"
    a:layout_width="match_parent"
    a:layout_height="match_parent"
    a:orientation="vertical">

    <LinearLayout
        a:id="@+id/LinearLayout3"
        a:layout_width="fill_parent"
        a:layout_height="37sp"
        style="@style/linearLayoutRow"
        a:layout_marginTop="0dp">

        <TextView
            a:id="@+id/spacer1"
            a:layout_width="0dp"
            a:layout_weight="1"
            a:layout_height="wrap_content" />

        <TextView
            a:id="@+id/vendorHeaderLabel"
            style="@style/centerAlignLabel"
            a:layout_width="0dp"
            a:layout_height="wrap_content"
            a:layout_weight="1"
            a:text="@string/vendor_rate" />

        <TextView
            a:id="@+id/lblVendorRate"
            style="@style/centerAlignLabel"
            a:layout_width="0dp"
            a:layout_height="wrap_content"
            a:layout_weight="1"
            a:text="@string/calculated_total" />

    </LinearLayout>

    <LinearLayout
        style="@style/linearLayoutRow"
        a:layout_width="fill_parent"
        a:layout_height="37sp">

        <TextView
            style="@style/leftAlignLabel"
            a:layout_width="0dp"
            a:layout_height="wrap_content"
            a:layout_weight="1"
            a:text="@string/cc_long" />

        <EditText
            a:id="@+id/CCFR"
            style="@style/percentageInput"
            a:layout_width="0dp"
            a:layout_height="wrap_content"
            a:layout_weight="1" />

        <TextView
            a:id="@+id/CCT"
            style="@style/centerAlignLabel"
            a:layout_width="0dp"
            a:layout_height="wrap_content"
            a:layout_weight="1"
            a:textIsSelectable="true" />

    </LinearLayout>

    <LinearLayout
        style="@style/linearLayoutRow"
        a:layout_width="fill_parent"
        a:layout_height="37sp">

        <TextView
            style="@style/leftAlignLabel"
            a:layout_width="0dp"
            a:layout_height="wrap_content"
            a:layout_weight="1"
            a:text="@string/bc_long" />

        <EditText
            a:id="@+id/BCFR"
            style="@style/percentageInput"
            a:layout_width="0dp"
            a:layout_height="wrap_content"
            a:layout_weight="1" />

        <TextView
            a:id="@+id/BCT"
            style="@style/centerAlignLabel"
            a:layout_width="0dp"
            a:layout_height="wrap_content"
            a:layout_weight="1"
            a:textIsSelectable="true" />

    </LinearLayout>

    <LinearLayout
        style="@style/linearLayoutRow"
        a:layout_width="fill_parent"
        a:layout_height="37sp">

        <TextView
            style="@style/leftAlignLabel"
            a:layout_width="0dp"
            a:layout_height="wrap_content"
            a:layout_weight="1"
            a:text="@string/dc_long" />

        <EditText
            a:id="@+id/DCFR"
            style="@style/currencyInput"
            a:layout_width="0dp"
            a:layout_height="wrap_content"
            a:layout_weight="1" />

        <TextView
            a:id="@+id/DCT"
            style="@style/centerAlignLabel"
            a:layout_width="0dp"
            a:layout_height="wrap_content"
            a:layout_weight="1"
            a:textIsSelectable="true" />

    </LinearLayout>

    <LinearLayout
        style="@style/linearLayoutRow"
        a:layout_width="fill_parent"
        a:layout_height="37sp">

        <TextView
            a:id="@+id/lblVendorIncPci"
            style="@style/rightAlignLabel"
            a:layout_width="0dp"
            a:layout_height="wrap_content"
            a:layout_weight="2"
            a:text="@string/vendor_inc_pci" />

        <EditText
            a:id="@+id/FIncPciRate"
            style="@style/currencyInput"
            a:layout_width="0dp"
            a:layout_height="wrap_content"
            a:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        style="@style/linearLayoutRow"
        a:layout_width="fill_parent"
        a:layout_height="37sp">

        <TextView
            a:id="@+id/lblVendorTerminal"
            style="@style/rightAlignLabel"
            a:layout_width="0dp"
            a:layout_height="wrap_content"
            a:layout_weight="2"
            a:text="@string/vendor_terminal" />

        <EditText
            a:id="@+id/VendorTerminal"
            style="@style/currencyInput"
            a:layout_width="0dp"
            a:layout_height="wrap_content"
            a:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
